force-app/main/default/objects/Tech_Recibo_Pago__c/Tech_Recibo_Pago__c.object-meta.xml
<CustomObject>
    <label>Recibo Pago</label>
    <nameField>
        <displayFormat>Recibo_Pago_{0000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tech Recibo Pagos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>