force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Cliente_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Nombre__c</fullName>
    <formula>Seguro__r.Cliente__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>