force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Programado</fullName>
                <default>true</default>
                <label>Programado</label>
            </value>
            <value>
                <fullName>Por cobrar</fullName>
            </value>
            <value>
                <fullName>Cobrado</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
            <value>
                <fullName>Parcial</fullName>
            </value>
            <value>
                <fullName>Anulado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>