force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Fecha_pago__c.field-meta.xml
<CustomField>
    <fullName>Fecha_pago__c</fullName>
    <label>Fecha pago</label>
    <type>Date</type>
</CustomField>