force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Fecha_programada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_programada__c</fullName>
    <label>Fecha programada</label>
    <type>Date</type>
</CustomField>