force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Intentos_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Intentos_Contacto__c</fullName>
    <label>Intentos Contacto</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>