force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Metodo_pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_pago__c</fullName>
    <label>Metodo de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Metodo_pago</valueSetName>
    </valueSet>
</CustomField>