force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Monto_cobrado__c.field-meta.xml
<CustomField>
    <fullName>Monto_cobrado__c</fullName>
    <label>Monto cobrado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>