force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Monto_programado__c.field-meta.xml
<CustomField>
    <fullName>Monto_programado__c</fullName>
    <label>Monto programado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>