force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Motivo_No_Pago__c.field-meta.xml
<CustomField>
    <fullName>Motivo_No_Pago__c</fullName>
    <label>Motivo No Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente decide cancelar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>