force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Numero de cuota</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>