force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Plan_de_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Pagos__c</fullName>
    <label>Plan de Pago</label>
    <referenceTo>Tech_Plan_de_Pago__c</referenceTo>
    <relationshipLabel>Tech Recibo Pagos</relationshipLabel>
    <relationshipName>Tech_Recibo_Pagos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>