force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Poliza_numero__c.field-meta.xml
<CustomField>
    <fullName>Poliza_numero__c</fullName>
    <label>Seguro/Fianza</label>
    <length>20</length>
    <type>Text</type>
</CustomField>