force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Referencia_pago__c.field-meta.xml
<CustomField>
    <fullName>Referencia_pago__c</fullName>
    <label>Referencia de pago</label>
    <length>100</length>
    <type>Text</type>
</CustomField>