force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <formula>Monto_programado__c - IF(ISNULL(Monto_cobrado__c), 0, Monto_cobrado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>