force-app/main/default/objects/Tech_Recibo_Pago__c/fields/Seguro__c.field-meta.xml
<CustomField>
    <fullName>Seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seguro</label>
    <referenceTo>Tech_Seguro__c</referenceTo>
    <relationshipLabel>Tech Recibo Pagos</relationshipLabel>
    <relationshipName>Tech_Recibo_Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>