force-app/main/default/objects/Tech_Recibo_Pago__c/validationRules/Motivo_de_no_pago.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_de_no_pago</fullName>
    <active>true</active>
    <description>Validar motivo de no pago</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Estado__c, &quot;No Pagado&quot;),
    ISBLANK(TEXT(Motivo_No_Pago__c))
)</errorConditionFormula>
    <errorMessage>Para marcar un recibo como No Pagado debes capturar el motivo.</errorMessage>
</ValidationRule>