force-app/main/default/objects/Tech_Recibo_Pago__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente_Nombre__c</columns>
    <columns>Fecha_programada__c</columns>
    <columns>Estado__c</columns>
    <columns>Plan_de_Pagos__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>